--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <input id="search" placeholder="Search Section">
   <div id="result"></div>
 
-  <script src="script.js"></script>
+ <script src="script.js?v=2"></script>
 </body>
+
 </html>
